--- a/index.html
+++ b/index.html
@@ -1661,7 +1661,8 @@
                 <div id="success-message" class="success-message">
                   Thank you! Your message has been sent successfully.
                 </div>
-                <form class="contact-form" id="contact" onsubmit="submitContactForm(event)">
+               <form class="form" action="https://api.web3forms.com/submit" method="POST">
+        <input type="hidden" name="access_key" value="dc29630e-b890-4b86-8104-f56df7bcc2c9">
                   <div class="form-row">
                     <div class="form-group">
                       <label class="form-label">Name *</label>
@@ -2014,7 +2015,7 @@
     setInterval(nextSlide, 5000);
 
     // Form handling with enhanced validation
-    const form = document.querySelector(".form");
+    const form = document.querySelector(".contact-form");
     const result = document.getElementById("result");
     const errorBox = document.getElementById("form-error");
 
