--- a/index.html
+++ b/index.html
@@ -1790,140 +1790,8 @@
     </div>
   </footer>
 
- <!-- ==============================
-UI / Navigation / Animations Script
-============================== -->
 <script>
-  // Utility: Set current year
-  const yearEl = document.getElementById("year");
-  if (yearEl) yearEl.textContent = new Date().getFullYear();
-
-  // Mobile menu toggle
-  const menuToggle = document.querySelector('.menu-toggle');
-  const nav = document.querySelector('nav');
-  if (menuToggle && nav) {
-    menuToggle.addEventListener('click', () => nav.classList.toggle('active'));
-    nav.querySelectorAll('a').forEach(link => {
-      link.addEventListener('click', () => nav.classList.remove('active'));
-    });
-  }
-
-  // Smooth scrolling for anchor links
-  document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-    anchor.addEventListener('click', function (e) {
-      e.preventDefault();
-      const target = document.querySelector(this.getAttribute('href'));
-      if (target) {
-        target.scrollIntoView({ behavior: 'smooth', block: 'start' });
-      }
-    });
-  });
-
-  // Active navigation link on scroll
-  const sections = document.querySelectorAll('section[id]');
-  const navLinks = document.querySelectorAll('nav a[href^="#"]');
-  function updateActiveNav() {
-    let current = '';
-    sections.forEach(section => {
-      const sectionTop = section.offsetTop - 100;
-      const sectionHeight = section.clientHeight;
-      if (window.scrollY >= sectionTop && window.scrollY < sectionTop + sectionHeight) {
-        current = section.getAttribute('id');
-      }
-    });
-    navLinks.forEach(link => {
-      link.classList.remove('active');
-      if (link.getAttribute('href') === `#${current}`) {
-        link.classList.add('active');
-      }
-    });
-  }
-  window.addEventListener('scroll', updateActiveNav);
-
-  // Service gallery auto-slide
-  const serviceTrack = document.getElementById("serviceTrack");
-  if (serviceTrack) {
-    let currentSlide = 0;
-    const totalSlides = serviceTrack.children.length;
-    function nextSlide() {
-      currentSlide = (currentSlide + 1) % totalSlides;
-      serviceTrack.style.transform = `translateX(-${currentSlide * 100}%)`;
-    }
-    setInterval(nextSlide, 5000);
-  }
-
-  // Scroll animations (fade-in)
-  const observer = new IntersectionObserver(entries => {
-    entries.forEach(entry => {
-      if (entry.isIntersecting) entry.target.classList.add('visible');
-    });
-  }, { threshold: 0.1, rootMargin: '0px 0px -50px 0px' });
-  document.querySelectorAll('.fade-in').forEach(el => observer.observe(el));
-
-  // Parallax effect for optional .parallax-bg
-  window.addEventListener('scroll', () => {
-    const scrolled = window.pageYOffset;
-    const parallax = document.querySelector('.parallax-bg');
-    if (parallax) {
-      parallax.style.transform = `translateY(${scrolled * 0.5}px)`;
-    }
-  });
-
-  // Hover effects
-  document.querySelectorAll('.service-card').forEach(card => {
-    card.addEventListener('mouseenter', () => {
-      card.style.transform = 'translateY(-15px) scale(1.02)';
-      card.style.zIndex = '10';
-    });
-    card.addEventListener('mouseleave', () => {
-      card.style.transform = 'translateY(0) scale(1)';
-      card.style.zIndex = '1';
-    });
-  });
-
-  document.querySelectorAll('.social-link').forEach(link => {
-    link.addEventListener('mouseenter', () => {
-      link.style.transform = 'translateY(-5px) scale(1.15) rotate(5deg)';
-    });
-    link.addEventListener('mouseleave', () => {
-      link.style.transform = 'translateY(0) scale(1) rotate(0deg)';
-    });
-  });
-
-  // Form input focus effect
-  document.querySelectorAll('.form-input, .form-textarea, .form-select').forEach(input => {
-    input.addEventListener('focus', function () {
-      this.parentElement.style.transform = 'translateY(-2px)';
-    });
-    input.addEventListener('blur', function () {
-      this.parentElement.style.transform = 'translateY(0)';
-    });
-  });
-
-  // Lazy load images
-  const imageObserver = new IntersectionObserver((entries, observer) => {
-    entries.forEach(entry => {
-      if (entry.isIntersecting) {
-        const img = entry.target;
-        img.src = img.dataset.src;
-        img.classList.remove('lazy');
-        observer.unobserve(img);
-      }
-    });
-  });
-  document.querySelectorAll('img[data-src]').forEach(img => imageObserver.observe(img));
-
-  // Page load animation
-  window.addEventListener('load', () => {
-    document.body.style.opacity = '1';
-  });
-</script>
-
-
-<!-- ==============================
-Contact Form Script (Web3Forms)
-============================== -->
-<script>
+  // Contact Form Handling with Validation
   const form = document.querySelector(".contact-form");
   const result = document.getElementById("result");
   const errorBox = document.getElementById("form-error");
@@ -1932,39 +1800,55 @@ Contact Form Script (Web3Forms)
     form.addEventListener("submit", async function (e) {
       e.preventDefault();
 
-      // Reset messages
-      if (errorBox) {
-        errorBox.style.display = "none";
-        errorBox.textContent = "";
-      }
-      if (result) result.innerHTML = "";
+      // Clear messages
+      errorBox.style.display = "none";
+      errorBox.textContent = "";
+      result.innerHTML = "";
 
       const formData = new FormData(form);
-      const name = (formData.get('name') || '').trim();
-      const email = (formData.get('email') || '').trim();
-      const phone = (formData.get('phone') || '').trim();
-      const message = (formData.get('message') || '').trim();
+      const name = formData.get("name")?.trim();
+      const email = formData.get("email")?.trim();
+      const phone = formData.get("phone")?.trim();
+      const message = formData.get("message")?.trim();
 
       // Validation
-      if (!/^[A-Za-z\s]{2,50}$/.test(name)) return showError("❌ Please enter a valid name (2–50 letters).");
-      if (!/^[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{2,}$/.test(email)) return showError("❌ Please enter a valid email address.");
-      if (phone && !/^\d{10}$/.test(phone)) return showError("❌ Phone number must be exactly 10 digits.");
-      if (message.length < 20) return showError("❌ Please provide more details (at least 20 characters).");
+      if (!/^[A-Za-z\s]{2,50}$/.test(name)) {
+        showError("❌ Please enter a valid name (2–50 letters).");
+        return;
+      }
+      if (!/^[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{2,}$/.test(email)) {
+        showError("❌ Please enter a valid email address.");
+        return;
+      }
+      if (phone && !/^\d{10}$/.test(phone)) {
+        showError("❌ Phone number must be 10 digits.");
+        return;
+      }
+      if (message.length < 20) {
+        showError("❌ Message must be at least 20 characters.");
+        return;
+      }
 
-      // Loading state
+      // Button loading state
       const submitBtn = form.querySelector('button[type="submit"]');
       const originalText = submitBtn.innerHTML;
-      submitBtn.innerHTML = '<span>⏳</span> Sending...';
+      submitBtn.innerHTML = "⏳ Sending...";
       submitBtn.disabled = true;
 
       try {
-        const response = await fetch(form.action, { method: form.method, body: formData });
+        const response = await fetch(form.action, {
+          method: form.method,
+          body: formData,
+        });
+
         if (response.ok) {
           showSuccess("✅ Thank you! Your message has been sent successfully.");
           form.reset();
-        } else throw new Error('Network error');
-      } catch {
-        showError("❌ Something went wrong. Please try again later.");
+        } else {
+          throw new Error("Network response error");
+        }
+      } catch (error) {
+        showError("❌ Something went wrong. Please try again.");
       } finally {
         submitBtn.innerHTML = originalText;
         submitBtn.disabled = false;
@@ -1973,24 +1857,114 @@ Contact Form Script (Web3Forms)
   }
 
   function showError(message) {
-    if (errorBox) {
-      errorBox.textContent = message;
-      errorBox.style.display = "block";
-      errorBox.scrollIntoView({ behavior: 'smooth', block: 'center' });
-    } else {
-      alert(message);
-    }
+    errorBox.textContent = message;
+    errorBox.style.display = "block";
+    errorBox.scrollIntoView({ behavior: "smooth", block: "center" });
   }
 
   function showSuccess(message) {
-    if (result) {
-      result.innerHTML = `<div class="success-message">${message}</div>`;
-      result.scrollIntoView({ behavior: 'smooth', block: 'center' });
-      setTimeout(() => { result.innerHTML = ""; }, 8000);
-    } else {
-      alert(message);
-    }
+    result.innerHTML = `<div class="success-message">${message}</div>`;
+    result.scrollIntoView({ behavior: "smooth", block: "center" });
+    setTimeout(() => {
+      result.innerHTML = "";
+    }, 8000);
   }
+</script>
+<script>
+  // Current year
+  document.getElementById("year").textContent = new Date().getFullYear();
+
+  // Mobile menu toggle
+  const menuToggle = document.querySelector(".menu-toggle");
+  const nav = document.querySelector("nav");
+
+  if (menuToggle && nav) {
+    menuToggle.addEventListener("click", () => {
+      nav.classList.toggle("active");
+    });
+
+    nav.querySelectorAll("a").forEach((link) => {
+      link.addEventListener("click", () => nav.classList.remove("active"));
+    });
+  }
+
+  // Smooth scrolling
+  document.querySelectorAll('a[href^="#"]').forEach((anchor) => {
+    anchor.addEventListener("click", function (e) {
+      e.preventDefault();
+      const target = document.querySelector(this.getAttribute("href"));
+      if (target) {
+        target.scrollIntoView({ behavior: "smooth", block: "start" });
+      }
+    });
+  });
+
+  // Update active nav link on scroll
+  const sections = document.querySelectorAll("section[id]");
+  const navLinks = document.querySelectorAll("nav a[href^='#']");
+  window.addEventListener("scroll", () => {
+    let current = "";
+    sections.forEach((section) => {
+      const sectionTop = section.offsetTop - 100;
+      const sectionHeight = section.clientHeight;
+      if (window.scrollY >= sectionTop && window.scrollY < sectionTop + sectionHeight) {
+        current = section.getAttribute("id");
+      }
+    });
+    navLinks.forEach((link) => {
+      link.classList.remove("active");
+      if (link.getAttribute("href") === `#${current}`) {
+        link.classList.add("active");
+      }
+    });
+  });
+
+  // Auto-slide service gallery
+  const serviceTrack = document.getElementById("serviceTrack");
+  if (serviceTrack) {
+    let currentSlide = 0;
+    const totalSlides = serviceTrack.children.length;
+    setInterval(() => {
+      currentSlide = (currentSlide + 1) % totalSlides;
+      serviceTrack.style.transform = `translateX(-${currentSlide * 100}%)`;
+    }, 5000);
+  }
+
+  // Intersection observer animations
+  const observer = new IntersectionObserver((entries) => {
+    entries.forEach((entry) => {
+      if (entry.isIntersecting) entry.target.classList.add("visible");
+    });
+  }, { threshold: 0.1, rootMargin: "0px 0px -50px 0px" });
+  document.querySelectorAll(".fade-in").forEach((el) => observer.observe(el));
+
+  // Service card hover
+  document.querySelectorAll(".service-card").forEach((card) => {
+    card.addEventListener("mouseenter", function () {
+      this.style.transform = "translateY(-15px) scale(1.02)";
+    });
+    card.addEventListener("mouseleave", function () {
+      this.style.transform = "translateY(0) scale(1)";
+    });
+  });
+
+  // Lazy load images
+  const imageObserver = new IntersectionObserver((entries, observer) => {
+    entries.forEach((entry) => {
+      if (entry.isIntersecting) {
+        const img = entry.target;
+        img.src = img.dataset.src;
+        img.classList.remove("lazy");
+        observer.unobserve(img);
+      }
+    });
+  });
+  document.querySelectorAll("img[data-src]").forEach((img) => imageObserver.observe(img));
+
+  // Page fade-in
+  window.addEventListener("load", () => {
+    document.body.style.opacity = "1";
+  });
 </script>
 
 
