--- a/pricing/index.html
+++ b/pricing/index.html
@@ -629,7 +629,31 @@
       .quote-card h2 {
         font-size: 2rem;
       }
+	
     }
+   #price h2 {
+  margin-top: 40px;     /* space above heading */
+  margin-bottom: 30px;  /* space below heading */
+}
+
+    h2 {
+      font-size: 3rem;
+      font-weight: 700;
+      text-align: center;
+      margin-bottom: 60px;
+      background: linear-gradient(135deg, #ffffff 0%, #4facfe 100%);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
+    }
+
+	   h2 {
+        font-size: 2rem;
+      }
+
+
+
+	  
   </style>
   
   
@@ -1272,7 +1296,8 @@
     </section>
 
     <!-- Pricing Plans -->
-    <section class="pricing-section container">
+    <section class="pricing-section container" id="price">
+		<h2>Our Price Plan</h2>
       <div class="pricing-grid">
         <!-- Basic Website -->
         <div class="pricing-card">
