--- a/index.html
+++ b/index.html
@@ -78,7 +78,11 @@
   margin-bottom: 30px;  /* space below heading */
 }
 
-
+ #home hero {
+  margin-top: 0px;     /* space above heading */
+  margin-bottom: 30px;  /* space below heading */
+}
+	  
 .footer-header {
   text-align: center;
   margin-bottom: 40px;  /* space between text and footer content */
