--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
   align-items: center;       /* vertical center */
   justify-content: center;   /* horizontal center */
   text-align: center;        /* center text */
-  padding: 60px 20px;        /* some breathing space */
+  /* some breathing space */
   box-sizing: border-box;    /* include padding in height calc */
 }
 .hero .container {
