--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
 
     /* Hero Section */
     .hero {
-      padding: 60px 0 30px;
+      padding: 1200px 0 ;
       text-align: center;
       position: relative;
     }
