--- a/index.html
+++ b/index.html
@@ -299,6 +299,7 @@
     /* Hero Section */
     .hero {
       padding: 10px 0 ;
+	  margin-top:10px;
       text-align: center;
       position: relative;
     }
