--- a/index.html
+++ b/index.html
@@ -300,6 +300,7 @@
     .hero {
       padding: 10px 0 ;
 	  margin-top:1px;
+		margin-bottom:60px;
       text-align: center;
       position: relative;
     }
