--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
       top: 0;
       left: 0;
       width: 100%;
-      padding: 16px 0 60px;
+      padding: 16px 0 ;
 	  
       background: rgba(10, 14, 26, 0.8);
       backdrop-filter: blur(20px) saturate(180%);
