--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
     /* Container */
     .container {
       max-width: 1200px;
-      margin: 0 auto;
-      padding: 0 20px;
+      margin: 60px 0 60px;
+     
     }
 
     /* Header */
