--- a/index.html
+++ b/index.html
@@ -78,7 +78,20 @@
   margin-bottom: 30px;  /* space below heading */
 }
 
+.hero {
+  margin-top: 0;
+  padding-top: 40px; /* adjust this value as needed */
+}
+.hero h1 {
+  margin-top: 0;
+}
+header, nav {
+  margin-bottom: 0;
+  padding-bottom: 0;
+}
 
+
+	  
 	  
 .footer-header {
   text-align: center;
@@ -169,7 +182,7 @@
     /* Container */
     .container {
       max-width: 1200px;
-      margin: 60px 0 60px;
+   
      
     }
 
