--- a/index.html
+++ b/index.html
@@ -78,17 +78,8 @@
   margin-bottom: 30px;  /* space below heading */
 }
 
-.hero {
-  margin-top: 0;
-  padding-top: 1px; /* adjust this value as needed */
-}
-.hero h1 {
-  margin-top: 0;
-}
-header, nav {
-  margin-bottom: 0;
-  padding-bottom: 0;
-}
+
+
 
 
 	  
@@ -187,20 +178,24 @@ header, nav {
     }
 
     /* Header */
-    header {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      padding: 16px 0 ;
-	  margin-top:1000x;
-	 
-      background: rgba(10, 14, 26, 0.8);
-      backdrop-filter: blur(20px) saturate(180%);
-      border-bottom: 1px solid var(--border-color);
-      z-index: 1000;
-      animation: slideDown 0.8s ease-out;
-    }
+   header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 16px 0;
+  margin: 0; /* ✅ remove that 1000x mistake */
+  background: rgba(10, 14, 26, 0.8);
+  backdrop-filter: blur(20px) saturate(180%);
+  border-bottom: 1px solid var(--border-color);
+  z-index: 1000;
+  animation: slideDown 0.8s ease-out;
+}
+
+.hero {
+  padding-top: 120px; /* ✅ add enough space for header height */
+}
+
 
     @keyframes slideDown {
       from { transform: translateY(-100%); opacity: 0; }
