--- a/index.html
+++ b/index.html
@@ -194,7 +194,8 @@
 
 .hero {
   padding-top: 1px;
-	  margin: 0;/* ✅ add enough space for header height */
+	  margin-top: 0;
+	margin-bottom:20px;/* ✅ add enough space for header height */
 }
 
 
