--- a/index.html
+++ b/index.html
@@ -77,7 +77,12 @@
   margin-top: 40px;     /* space above heading */
   margin-bottom: 30px;  /* space below heading */
 }
-
+  .page-header {
+      text-align: center;
+      margin-bottom: 60px;
+       margin-top: 100px;
+      animation: fadeInUp 1s ease-out;
+    }
 
 
 
@@ -904,7 +909,7 @@
 
   <main>
     <!-- Hero Section -->
-    <section id="home" class="hero">
+    <section id="home" class="page-header">
       <div class="container">
         <div class="hero-content">
           <h1>We Build <span class="accent">Software</span> & <span class="accent">Websites</span> That Help You Grow</h1>
