--- a/index.html
+++ b/index.html
@@ -86,7 +86,11 @@
 
 
 
-
+ .container {
+      max-width: 1200px;
+      margin: 0 auto;
+      padding: 0 20px;
+    }
 	  
 	  
 .footer-header {
@@ -909,7 +913,7 @@
 
   <main>
     <!-- Hero Section -->
-    <section id="home" class="page-header">
+    <section id="home" class="hero">
       <div class="container">
         <div class="hero-content">
           <h1>We Build <span class="accent">Software</span> & <span class="accent">Websites</span> That Help You Grow</h1>
