--- a/services/index.html
+++ b/services/index.html
@@ -463,10 +463,22 @@
     footer {
       text-align: center;
       padding: 40px 0;
-      margin-top: 60px;
+      margin-top: 100px;
       border-top: 1px solid var(--border-color);
       color: var(--text-secondary);
     }
+
+    footer a {
+      color: var(--text-accent);
+      text-decoration: none;
+      margin: 0 10px;
+      transition: all 0.3s ease;
+    }
+
+    footer a:hover {
+      text-decoration: underline;
+    }
+
 
     /* Responsive Design */
     @media (max-width: 768px) {
