--- a/index.html
+++ b/index.html
@@ -904,7 +904,7 @@
           <a href="/services">Services</a>
           <a href="#work">Work</a>
           <a href="/pricing">Pricing</a>
-          <a href="#contact">Contact</a>
+          <a href="/contact">Contact</a>
           <a class="cta-btn" href="#contact">Get Started</a>
         </nav>
       </div>
