--- a/pricing/index.html
+++ b/pricing/index.html
@@ -1256,8 +1256,8 @@
           <a href="/services">Services</a>
           <a href="/#work">Work</a>
           <a href="/pricing" class="active">Pricing</a>
-          <a href="/#contact">Contact</a>
-          <a class="cta-btn" href="/#contact">Get Started</a>
+          <a href="/contact">Contact</a>
+          <a class="cta-btn" href="/contact">Get Started</a>
         </nav>
       </div>
     </div>
