--- a/services/index.html
+++ b/services/index.html
@@ -570,8 +570,8 @@
           <a href="/services"  class="active">Services</a>
           <a href="/#work">Work</a>
           <a href="/pricing">Pricing</a>
-          <a href="/#contact">Contact</a>
-          <a class="cta-btn" href="/#contact">Get Started</a>
+          <a href="/contact">Contact</a>
+          <a class="cta-btn" href="/contact">Get Started</a>
         </nav>
       </div>
     </div>
