--- a/services/index.html
+++ b/services/index.html
@@ -561,53 +561,64 @@
       font-size: 16px;
     }
 
-    .address-info {
-      display: flex;
-      justify-content: space-between;
-      align-items: flex-start;
-      flex-wrap: wrap;
-      gap: 20px;
+   .address-info {
+      color: var(--text-secondary);
+      line-height: 1.8;
     }
 
-    .address-item {
-      flex: 1;
-      min-width: 200px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      text-align: center;
-      gap: 8px;
-    }
+.address-info {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  gap: 20px;
+  text-align: left;
+}
 
-    .address-item:nth-child(1) {
-      align-items: flex-start;
-      text-align: left;
-    }
 
-    .address-item:nth-child(2) {
-      align-items: center;
-      text-align: center;
-    }
+.address-item {
+  flex: 1;
+  min-width: 200px;
+  display: flex;
+  flex-direction: column; /* stack icon on top */
+  align-items: center;    /* center by default */
+  text-align: center;
+  gap: 8px;
+}
 
-    .address-item:nth-child(3) {
-      align-items: flex-end;
-      text-align: right;
-    }
+/* Left item (Address) */
+.address-item:nth-child(1) {
+  align-items: flex-start;
+  text-align: left;
+}
 
-    .address-item .icon {
-      width: 40px;
-      height: 40px;
-      background: var(--accent-gradient);
-      border-radius: 50%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: #fff;
-      font-size: 16px;
-      flex-shrink: 0;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
-      margin-bottom: 6px;
-    }
+/* Center item (Phone) */
+.address-item:nth-child(2) {
+  align-items: center;
+  text-align: center;
+}
+
+/* Right item (Email) */
+.address-item:nth-child(3) {
+  align-items: flex-end;
+  text-align: right;
+}
+
+.address-item .icon {
+  width: 40px;
+  height: 40px;
+  background: var(--accent-gradient);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  font-size: 16px;
+  flex-shrink: 0;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+  margin-bottom: 6px; /* space between icon and text */
+}
+
 
     /* Social Media Section */
     .social-media h3 {
