--- a/contact/index.html
+++ b/contact/index.html
@@ -1188,9 +1188,9 @@
            
           </div>
    
-            
+             </div>
           </div>
-
+  </div>
           <!-- Map and Contact Form -->
           <div class="map-form-container fade-in">
             <!-- Map Section -->
