--- a/contact/index.html
+++ b/contact/index.html
@@ -1114,7 +1114,7 @@
                   <div class="contact-icon">📞</div>
                   <div class="contact-text">
                     <h3>Call Us</h3>
-                    <p><a href="tel:+919876543210">+91 98765 43210</a><br>
+                    <p><a href="tel:+919876543210">+91 7014487984</a><br>
                     Mon - Sat: 9:00 AM - 7:00 PM</p>
                   </div>
                 </div>
