--- a/services/index.html
+++ b/services/index.html
@@ -29,47 +29,6 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=JetBrains+Mono:wght@400;500;600&display=swap" rel="stylesheet">
 
-
-
-
-<!-- CSS -->
-<style>
-.contact-details {
-  display: flex;
-  justify-content: space-between; /* Left, Center, Right alignment */
-  text-align: center; /* Centers text inside each column */
-  margin-top: 20px; /* Space above the details */
-  flex-wrap: wrap; /* Makes it responsive */
-  gap: 20px; /* Space between columns on smaller screens */
-}
-
-.footer-header {
-  text-align: center; /* Centers text */
-  display: flex;
-  flex-direction: column; /* Stack h3 and p vertically */
-  align-items: center; /* Centers the content horizontally */
-  justify-content: center; /* Optional: centers vertically if you give a height */
-  margin: 20px 0; /* Optional spacing */
-}
-  
-.contact-item.address {
-  text-align: left;
-  flex: 1;
-}
-
-.contact-item.phone {
-  text-align: center;
-  flex: 1;
-}
-
-.contact-item.email {
-  text-align: right;
-  flex: 1;
-}
-</style>
-
-
-  
   <style>
     * {
       margin: 0;
@@ -602,64 +561,59 @@
       font-size: 16px;
     }
 
-   .address-info {
+    .address-info {
       color: var(--text-secondary);
       line-height: 1.8;
     }
 
-.address-info {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  flex-wrap: wrap;
-  gap: 20px;
-  text-align: left;
-}
+    .address-info {
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-start;
+      flex-wrap: wrap;
+      gap: 20px;
+      text-align: left;
+    }
 
+    .address-item {
+      flex: 1;
+      min-width: 200px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      gap: 8px;
+    }
 
-.address-item {
-  flex: 1;
-  min-width: 200px;
-  display: flex;
-  flex-direction: column; /* stack icon on top */
-  align-items: center;    /* center by default */
-  text-align: center;
-  gap: 8px;
-}
+    .address-item:nth-child(1) {
+      align-items: flex-start;
+      text-align: left;
+    }
 
-/* Left item (Address) */
-.address-item:nth-child(1) {
-  align-items: flex-start;
-  text-align: left;
-}
+    .address-item:nth-child(2) {
+      align-items: center;
+      text-align: center;
+    }
 
-/* Center item (Phone) */
-.address-item:nth-child(2) {
-  align-items: center;
-  text-align: center;
-}
+    .address-item:nth-child(3) {
+      align-items: flex-end;
+      text-align: right;
+    }
 
-/* Right item (Email) */
-.address-item:nth-child(3) {
-  align-items: flex-end;
-  text-align: right;
-}
-
-.address-item .icon {
-  width: 40px;
-  height: 40px;
-  background: var(--accent-gradient);
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: #fff;
-  font-size: 16px;
-  flex-shrink: 0;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.2);
-  margin-bottom: 6px; /* space between icon and text */
-}
-
+    .address-item .icon {
+      width: 40px;
+      height: 40px;
+      background: var(--accent-gradient);
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: #fff;
+      font-size: 16px;
+      flex-shrink: 0;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+      margin-bottom: 6px;
+    }
 
     /* Social Media Section */
     .social-media h3 {
@@ -1069,7 +1023,7 @@
     <div class="container">
       <div class="header-content">
         <a class="brand" href="/">
-          <img src="/assets/img/mylogo.png" alt="AS TECH IT SOLUTION logo">
+          <img src="https://astechit.in/assets/img/mylogo.png" alt="AS TECH IT SOLUTION logo">
           <span>AS TECH IT SOLUTION</span>
         </a>
         <button class="menu-toggle" aria-label="Toggle Menu">☰</button>
@@ -1315,28 +1269,37 @@
               </a>
             </div>
           </div>
-          
         </div>
-<!-- Company Info & Address -->
-          <!-- Contact Details Section -->
-<div class="contact-details">
-  <div class="contact-item address">
-    📍<br>
-    5th Floor, Dream Sapphire<br>
-    Ulwe, Navi Mumbai - 410206<br>
-    Maharashtra, India
-  </div>
 
-  <div class="contact-item phone">
-    📞<br>
-    +91 7014487984
-  </div>
+        <!-- Company Info & Address -->
+        <div class="footer-section company-info">
+          <div class="address-info">
+            <div class="address-item">
+              <div class="icon">📍</div>
+              <div>
+                <strong>Address:</strong><br>
+                5th Floor, Dream Sapphire<br>
+                Ulwe, Navi Mumbai - 410206<br>
+                Maharashtra, India
+              </div>
+            </div>
+            <div class="address-item">
+              <div class="icon">📞</div>
+              <div>
+                <strong>Phone:</strong><br>
+                +91 7014487984
+              </div>
+            </div>
+            <div class="address-item">
+              <div class="icon">✉️</div>
+              <div>
+                <strong>Email:</strong><br>
+                info@astechit.in
+              </div>
+            </div>
+          </div>
+        </div>
 
-  <div class="contact-item email">
-    ✉️<br>
-    info@astechit.in
-  </div>
-</div>
         <!-- Footer Bottom -->
         <div class="footer-bottom">
           <p>© <span id="year"></span> AS TECH IT SOLUTION. Crafted with ❤️ in India. All rights reserved.</p>
