--- a/services/index.html
+++ b/services/index.html
@@ -1303,7 +1303,7 @@
               <div class="icon">✉️</div>
               <div>
                 <strong>Email:</strong><br>
-                info@astechit.in
+              astech1811@gmail.com
               </div>
             </div>
           </div>
