--- a/index.html
+++ b/index.html
@@ -1507,7 +1507,7 @@
       padding: 14px 18px;
       border-radius: 12px;
       border: 1px solid var(--border-color);
-    
+      background: var(--glass-bg);
       color: var(--text-primary);
       font-size: 15px;
       font-family: inherit;
