--- a/index.html
+++ b/index.html
@@ -1503,11 +1503,11 @@
 
     .form-input,
     .form-textarea,
-    .form-select {
+   .form-select {
       padding: 14px 18px;
       border-radius: 12px;
       border: 1px solid var(--border-color);
-      background: var(--glass-bg);
+      background: var(--glass-bg)
       color: var(--text-primary);
       font-size: 15px;
       font-family: inherit;
@@ -1529,6 +1529,7 @@
     .form-textarea::placeholder {
       color: var(--text-secondary);
     }
+
 
     .form-textarea {
       min-height: 120px;
