--- a/services/index.html
+++ b/services/index.html
@@ -785,7 +785,7 @@
       padding: 14px 18px;
       border-radius: 12px;
       border: 1px solid var(--border-color);
-      background: var(--glass-bg);
+      background: var(--glass-bg)
       color: var(--text-primary);
       font-size: 15px;
       font-family: inherit;
@@ -807,6 +807,7 @@
     .form-textarea::placeholder {
       color: var(--text-secondary);
     }
+
 
     .form-textarea {
       min-height: 120px;
